--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/White"
     android:orientation="vertical" >
@@ -14,8 +15,9 @@
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="40dp"
+            app:srcCompat="@drawable/rss_icon"
+            android:layout_height="40dp"/>
 
         <TextView
             android:id="@+id/pubDate"
@@ -23,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="Small Text"
+            android:textColor="@color/Grey"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </LinearLayout>
